# thingy52-zephyr-example-application

./: .clang-format  .clang-tidy  .gitignore  BuildOptions.cmake  CMakeLists.txt  Makefile  README.md  west.yml
boards/: CMakeLists.txt
boards/arm/myboard/: README.md
boards/arm/nrf52840dk_nrf52840/: CMakeLists.txt  board.cmake
boards/arm/thingy52/: CMakeLists.txt
boards/arm/thingy52_nrf52832/: CMakeLists.txt  board.cmake  thingy52_nrf52832.overlay
cmake/: select_board.cmake
conf/: debug.conf  debug_rtt.conf  debug_uart.conf  prj.conf
src/: config_hts221.h  config_log.h  events.h  main.c  thread_hts221.c  thread_hts221.h  thread_led.c  thread_led.h
src/hts221/: hts221.c  hts221.h
